--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body .color-black{color: #000000!important}
  .container{max-width: 1620px;}
 /* header */
 header#header{position: fixed;top: 0; left: 0; width: 100%; margin-top: 10px; z-index: 20; transition: all .4s; margin-top: 35px;}
-header#header.active{background: rgba(255, 255, 255, 0.7); margin-top: 0; padding: 15px 0;}
+header#header.active{background: rgba(255, 255, 255, 0.7)!important; margin-top: 0; padding: 15px 0;}
 header#header .container{display: flex; justify-content: space-between; align-items: center;}
 .wrap-title{ text-align: center; padding-top: 25px;}
 .wrap-title h2{font-family: var(--font-bold); font-size: 80px; line-height: 160px;}
@@ -69,8 +69,8 @@ section#content-service .main-service{position: relative; z-index: 2;}
 section#content-service .main-service .item-service h2{text-align: center;}
 .scroll{position: relative; text-align: center; top: -75px; margin-top: 8%;}
 .scroll .scroll-txt{ font-size: 36px; margin-top: -40px; color:#8BB0CA}
-.scroll .scroll-animation{z-index: 9;overflow: hidden;position: absolute;right: 0;left: 0;top: 70px;margin: 0 auto; width: 6px;height: 138px;background: transparent;}
-.scroll .scroll-animation:after{content: '';display: block;width: 6px;border-left: 6px #8BB0CA solid;-webkit-animation: scroll-pc 1.5s ease-in-out 0.4s infinite normal;animation: scroll-pc 1.5s ease-in-out 0.4s infinite normal;margin: 0 auto 0;}
+.scroll .scroll-animation{z-index: 9;overflow: hidden;position: absolute;right: 0;left: 0;top: 70px;margin: 0 auto; width: 3px;height: 138px;background: transparent;}
+.scroll .scroll-animation:after{content: '';display: block;width: 3px;border-left: 3px #8BB0CA solid;-webkit-animation: scroll-pc 1.5s ease-in-out 0.4s infinite normal;animation: scroll-pc 1.5s ease-in-out 0.4s infinite normal;margin: 0 auto 0;}
 
 /* list-service */
 section#list-service{padding-bottom: 30px;}
@@ -186,7 +186,7 @@ section#wrap-price .content-price .item-box-price.box-show-price.active {border-
 .box-content-animation .box-image-popup .item-box{ margin:0 8px}
 section#wrap-price .box-content-animation .box-image-popup .item-box p{ font-size: 25px; color:#000000; margin-left: -70px; line-height: 50px; margin-bottom: 7px;}
 section#wrap-price .wrap-animation .box-content-animation p:not(.font-bold){line-height: 2; color:#000000; padding:0 35px; text-align: left; display: inline-block;width: 93%;}
-section#wrap-price .wrap-animation .box-content-animation p:not(.font-bold) span{ font-size: 36px; line-height: 50px; display: initial; margin-bottom: -36px; color:#000000}
+section#wrap-price .wrap-animation .box-content-animation p:not(.font-bold) span{ font-size: 28px; line-height: 50px; display: initial; margin-bottom: -36px; color:#000000}
 section#wrap-price .wrap-animation .box-content-animation p.font-bold.text-right{font-size: 36px; line-height: 50px; color: #000000; margin-top: 30px; margin-bottom: 40px;}
 .show-box-detail-service.show-popup{ margin-bottom: 3px; display: block;}
 .show-box-detail-service.show-popup:after{width: 100%; left: 0; background: var(--background-color-main);bottom: -5px;}
@@ -212,7 +212,6 @@ section#gym .wrap-slide-gym{margin:0;}
 section#gym .wrap-gym-animate{margin-bottom: 50px; padding-left: 0; padding-right: 0;}
 section#gym .wrap-slide-gym{width:100%; max-width: 800px; margin: 0 auto;}
 section#gym .wrap-slide-gym .item img{height: 483px;border-radius: 10px;position: relative; width: 100%;}
-section#gym .owl-carousel.owl-drag .owl-item.active .item img{animation-name: image-fade; animation-duration: 1.5s}
 section#gym .wrap-slide-gym .owl-carousel .owl-stage-outer {overflow: inherit; }
 section#gym p{font-size: 33px;}
 .content-slide-gym{width: 58%; margin:0 auto;margin-top: 60px; margin-bottom: 55px; text-align: left!important;}
@@ -228,25 +227,22 @@ section#gym .show-popup.active img{animation: none;}
 section#app{padding-bottom: 75px; padding-top: 80px;}
 section#app .box-app{padding-top: 80px; width: 80%; margin:0 auto}
 section#app .box-app .carousel{display: flex; justify-content: space-between; align-items: center;}
-section#app .box-app .box-background{ position: relative; width: 505px; margin-right: 50px; z-index: 15;}
+section#app .box-app .box-background{ position: relative; width: 505px; margin-right: 50px; z-index: 15; cursor: pointer;}
 section#app .box-app .carousel-inner {position: absolute;z-index: 2;margin: 20px 30px; max-width: 439px; width:100%; height: calc( 964px - 41px); overflow: hidden; border-radius: 35px; top: 41px;}
 section#app .box-app .carousel-inner .carousel-item{cursor: grab;}
 section#app .box-app .box-background #background-slide{position: relative;z-index: 1;}
 section#app .box-app .carousel-indicators{position: relative;margin: 0;justify-content: normal; flex-direction: column; margin-left: 10px; z-index: 9;}
-section#app .box-app .carousel-indicators li {transition: all .4s;text-indent: 0;width:auto; height: auto; font-size: 34px; font-family: var(--font-bold-500); opacity: 1; color:#000000;margin: 0;margin-bottom: -14px;min-height: 62px;display: inline-flex;align-items: center;line-height: 34px; cursor: default; padding:16px 0}
+section#app .box-app .carousel-indicators li {transition: all .4s;text-indent: 0;width:auto; height: auto; font-size: 34px; font-family: var(--font-bold-500); opacity: 1; color:#707070;margin: 0;margin-bottom: -14px;min-height: 62px;display: inline-flex;align-items: center;line-height: 34px; cursor: default; padding:16px 0}
 section#app .box-app .carousel-indicators li span{position: relative; width: 60px; height: 60px;margin-right: 10px;}
-section#app .box-app .carousel-indicators li span:before{content:"";position: absolute;left:5px;top: 5px; width:40px; height: 40px; border-radius: 100%; background: #B5C6CE; display: inline-block; margin-bottom: -7px; transition: all .4s;}
-section#app .box-app .carousel-indicators li.active{ font-size: 42px; transition: all .4s; margin-left: 25px;}
-section#app .box-app .carousel-indicators li.active span:before{width:60px; height: 60px; left: 0; top: 0;}
+section#app .box-app .carousel-indicators li span:before{content:"";position: absolute;left:50%;top: 50%; transform: translate(-50%, -50%); width:40px; height: 40px; border-radius: 100%; background: #B5C6CE; display: inline-block; margin-bottom: -7px; transition: all .4s;}
+section#app .box-app .carousel-indicators li.active{ font-size: 42px; transition: all .4s; color: #000000;}
+section#app .box-app .carousel-indicators li.active span:before{width:60px; height: 60px;}
 
-section#app .box-app .carousel-indicators li.show-small{margin-left: 10px!important;}
-section#app .box-app .carousel-indicators li.show-small span:before {width: 50px; height: 50px;}
 
 div.marquee {white-space:no-wrap;overflow:hidden; margin-top: -90px;}
 div.marquee > div.marquee-text {white-space:nowrap;display:inline;width:auto;}
 div.marquee > div.marquee-text img{margin-right: 100px;}
-section#app .box-app .box-background .box-control-slide{position: absolute;top: 17px;left: 30px;right: 35px;bottom: 17px;border-radius: 40px;}
-section#app .box-app .box-background:hover .box-control-slide{display: none;}
+section#app .box-app .box-background .box-control-slide{position: absolute;top: 17px;left: 30px;right: 35px;bottom: 17px;border-radius: 40px; z-index: 7;}
 section#app .box-app .box-background .box-control-slide a[class*=carousel-control-] {z-index: 6;width: auto;}
 section#app .box-app .box-background .box-control-slide a.carousel-control-prev{left: 20px;}
 section#app .box-app .box-background .box-control-slide a.carousel-control-next{right: 20px;}
@@ -271,7 +267,7 @@ section#service .wrap-slide-service .owl-carousel .item img{width: 100%; object-
 section#service .owl-carousel .owl-stage-outer {overflow: inherit;}
 section#service .container{overflow: hidden;}
 section#service .wrap-text-slide-service{padding:0 15px 20px;}
-section#service .wrap-text-slide-service a{display: inline-flex; border-radius: 8px; color:#FFFFFF; height: 45px; justify-content: center; align-items: center; font-family: var(--font-bold); font-size: 30px; min-width: 137px; margin-top: 40px; margin-bottom: 15px;}
+section#service .wrap-text-slide-service a{display: inline-flex; border-radius: 8px; color:#FFFFFF; justify-content: center; align-items: center; font-family: var(--font-bold); font-size: 30px; min-width: 137px; margin-top: 40px; margin-bottom: 15px; padding-top: 4px;padding-bottom: 11px;line-height: 1;}
 section#service .wrap-text-slide-service a.btn-green{background: var(--color-main);}
 section#service .wrap-text-slide-service p{margin:0; font-size: 30px; line-height: 45px; overflow: hidden;text-overflow: ellipsis;-webkit-line-clamp: 2;-webkit-box-orient: vertical;}
 section#service .wrap-text-slide-service a.btn-yeylow{background: #C5B9A1; min-width: 220px;}
@@ -310,7 +306,7 @@ main#main .wrap-box-table ul#wrap-table{ font-size: 33px; border:1px solid #6666
 main#main .wrap-box-table ul#wrap-table li{display: flex; border-bottom: 1px solid #666666;}
 main#main .wrap-box-table ul#wrap-table li:last-child{border:none}
 main#main .wrap-box-table ul#wrap-table li div{padding:25px 20px}
-main#main .wrap-box-table ul#wrap-table li div:first-child{width: 38%; padding-right: 16px;}
+main#main .wrap-box-table ul#wrap-table li div:first-child{width: 38%; padding-right: 16px; border-right: 1px solid #666666;}
 main#main .wrap-box-table ul#wrap-table li div:last-child{width: 62%;}
 
 .owl-carousel.owl-drag .owl-item , .owl-carousel.owl-drag .owl-item .item{height: 100%;}
